﻿1.3
===

New Features:

  * Add the ability to assign users to wiki groups (cclavadetscher).
  * Allow default role names to be configured via property file to better
    support LDAP (PhilTrimble).
  * Update Mediawiki XML exports to use the 0.7 XSD (previously 0.3).
  * Change the default image namespace from "Image" to "File" for new installs.
  * Upgrade to Spring Framework 3.1.1.RELEASE.
  * Upgrade to Lucene Search 3.6.
  * Upgrade to commons-io-2.2.

Bugfixes:

  * None.

Translation Updates:

  * None.


1.2.1
=====

New Features:

  * None.

Bugfixes:

  * Fix a Javascript error on the search page with IE.  Reported by shar.
  * Problem with history when using DB2 database.  Reported with a fix by
    Dennis N Brown.

Translation Updates:

  * Updated Italian translations (cclavadetscher).


1.2
===

New Features:

  * Upgrade dependencies to Servlet 2.5 and JSP 2.1.  Java 5 has been required
    since JAMWiki 0.8, so this change should be transparent to most users.
  * Add support for limited wiki text in edit summaries (wiki links, interwiki
    links) to match Mediawiki behavior.
  * Add a new JAMWiki:Header system topic that allows adding a custom message
    to the top of all pages, just below the tab bar.
  * Add a new JAMWiki:Custom.css stylesheet.  Starting with JAMWiki 1.2
    System.css will be used for base CSS styles, while Custom.css should be
    used for site-specific customizations.
  * Move the system topics (BottomArea, LeftMenu, StyleSheet) to the
    JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
  * Add an option to block malicious IP addresses that are on the Project
    Honeypot blacklist from creating accounts, editing and uploading files.
  * Support storing images directly in the database rather than on the
    filesystem (avhohlov2).
  * Store images by default in the JAMWiki file system directory, rather than
    the webapp root, to allow simpler setup and upgrades.