@@ -639,7 +639,10 @@ topic.category.numsubcategories=There are {0} sub-categories in category &quot;{
 topic.category.numtopics=There are {0} topics in category &quot;{1}&quot;
 topic.category.subcategories=Sub-categories for category &quot;{0}&quot;
 topic.category.topics=Topics in category &quot;{0}&quot;
+topic.file.comments=Comment
 topic.file.download=View/Download this file
+topic.file.size=Size
+topic.file.thumbnail=Thumbnail
 topic.filehistory=File History
 topic.filehistory.click=Click on a date/time to view the file revision from that time.
 topic.filesize.bytes={0} bytes
