@@ -6,6 +6,8 @@ New Features:
   * Add the ability to assign users to wiki groups (cclavadetscher).
   * Allow default role names to be configured via property file to better
     support LDAP (PhilTrimble).
+  * Display thumbnails of image versions on image topic pages, similar to the
+    Mediawiki GUI.
   * Update Mediawiki XML exports to use the 0.7 XSD (previously 0.3).
   * Change the default image namespace from "Image" to "File" for new installs.
   * Upgrade to Spring Framework 3.1.1.RELEASE.
